# cpp-python-template-2026

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  codecov.yml  pyproject.toml  release-please-config.json  vcpkg.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: ci.yml  codeql.yml  docs.yml  install.yml  python.yml  release-please.yml  wheels.yml
bindings/python/: CMakeLists.txt  module.cpp
bindings/python/mylib/: __init__.py  __init__.pyi
bindings/python/tests/: test_sum.py
cmake/: CompilerWarnings.cmake  Sanitizers.cmake  package-config.cmake.in
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  agents.md  conf.py  contributing.md  cpp_api.md  guide.md  index.md  python_api.md
docs/design/: architecture-overview.md  coding-standards.md  dependency-management.md  python-compatibility.md  test-driven-development.md
docs/design/adr/: 0001-record-architecture-decisions.md  template.md
include/mylib/: mylib.hpp  sum.hpp  version.hpp.in
scripts/: coverage.sh
src/: CMakeLists.txt  sum.cpp
standalone/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  sum_test.cpp
