# Python packaging for the optional mylib bindings.
#
# Build a wheel with:  pip wheel . --no-deps -w dist/
# scikit-build-core invokes CMake with MYLIB_BUILD_PYTHON=ON and packages the
# nanobind extension. The core C++ library has no dependency on any of this.
[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "mylib"
version = "0.1.0"
description = "Python bindings for the mylib C++ library"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "mylib authors" }]
classifiers = [
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/your-org/mylib"

# Dev tooling (PEP 735 dependency groups; installed by `uv run --group dev/docs`).
[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "mypy>=1.10",
  "ruff>=0.6",
]
docs = [
  "sphinx>=7.2",
  "furo>=2024.1",
  "breathe>=4.35",
  "myst-parser>=3",
  "sphinx-copybutton>=0.5",
]

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "out/wheel/{wheel_tag}"
wheel.packages = ["bindings/python/mylib"]
# Ship only the Python extension in the wheel, not the C++ static lib / headers /
# CMake config (those are for C++ consumers via `cmake --install`, not pip users).
install.components = ["python"]
cmake.version = ">=3.28"

[tool.scikit-build.cmake.define]
MYLIB_BUILD_PYTHON = "ON"
MYLIB_BUILD_TESTS = "OFF"
MYLIB_WARNINGS_AS_ERRORS = "OFF"

[tool.pytest.ini_options]
testpaths = ["bindings/python/tests"]
addopts = "-ra"

# --- ruff: lint + format (the Python equivalent of clang-format + clang-tidy) ---
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["out", "_deps"]

[tool.ruff.lint]
select = [
  "E", "F", "W",      # pyflakes + pycodestyle
  "I",                 # isort
  "N",                 # pep8-naming
  "UP",                # pyupgrade
  "B",                 # bugbear
  "A",                 # builtins shadowing
  "C4",                # comprehensions
  "SIM",               # simplify
  "RUF",               # ruff-specific
  "PT",                # pytest style
  "ANN",               # type annotations
]
# `sum` intentionally shadows the builtin to mirror the C++ API.
ignore = ["A001", "A003", "A004"]

[tool.ruff.lint.per-file-ignores]
"bindings/python/tests/*" = ["ANN"]  # tests need not be fully annotated

# --- mypy: strict static typing against the generated .pyi stubs ---------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
files = ["bindings/python"]

# --- coverage (coverage.py via pytest-cov) ------------------------------------
[tool.coverage.run]
source = ["mylib"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_also = ["if TYPE_CHECKING:", "raise NotImplementedError"]

[tool.cibuildwheel]
build-frontend = "build[uv]" # use uv to provision the build environment
# Smoke-test each built wheel by importing the module.
test-command = "python -c \"import mylib; print(mylib.sum(2, 3))\""
test-skip = "pp* *-musllinux_*"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
